<resources>
    <string name="app_name">Evoy</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_field_hint">Usuario</string>
    <string name="pass_field_hint">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarme</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_form">Introduzca los datos correctamente</string>
    <string name="contrasena">Contraseña</string>
    <!-- Strings related to Evoy feed -->
    <string name="follow">Seguir</string>
    <string name="unfollow">Dejar de seguir</string>
    <string name="myFeed">Mis eventos</string>
    <string name="allFeed">Explorar</string>
    <string name="myProfile">Mi Perfil</string>
    <string name="followers">Seguidores:</string>

    <string name="profile_username">Usuario:</string>
    <string name="profile_name">Nombre:</string>
    <string name="profile_surname">Apellido:</string>
    <string name="profile_email">E-mail:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_get_location">GetLocation</string>
    <string name="api_key">AIzaSyADhK72JjGFDBhVivlOoy9-B7Pn556VMzs</string>
</resources>
